# paper-tracker

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  pyproject.toml
.ai_docs/rules/: code_review_structure_rules.md  code_rules.md  git_rules.md  project_overview.md  testing_rules.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
archive/: search_20260210_123518.html  search_20260217_030042.html  search_20260223_142205.html  search_20260223_143343.html  search_20260223_143616.html  search_20260224_103625.html  search_20260224_103904.html
config/: default.yml  example.yml
config/test/: basic_query.yml  llm_enabled.yml
docs/: arxiv-api-query.md  cli-architecture.md  compare.md  configuration.md  content-storage.md  environment-variables.md  llm-features.md  markdown-export.md  output-rendering.md  storage.md  testing.md  todo.md
docs/en/: content-storage.md  guide_configuration.md  guide_user.md  source_arxiv_api_query.md
docs/zh/: architecture_code_flow.md  guide_configuration.md  guide_user.md  guide_weekly_publish.md  (+1 more)
plans/: cleanup.md  content-storage-design.md  storage-feat.md
scripts/: README.md  weekly_publish.sh  weekly_publish_mac.sh
test/: smoke_test.py  test_basic_query.py  test_config_layering.py  test_config_override.py  test_crossref_not_filter.py  test_deduplicate_store.py  test_markdown_writer.py  test_migration.py  test_search_command_persistence_order.py  test_search_service_multisource.py
(+84 files in other folders)
